Further enhanced projects' details, minor improvements to navbar, scrollbar and fonts

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
     <!-- Custom JavaScript --> 
     <script src="js/welcome.js"></script>
+    <script src="js/projectsData.js"></script>
     <script src="js/projectCreator.js"></script>
 
     <!-- Language Switch -->
