--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                   <h3 class="skills-header mb-4 text-center">Back-End</h3>
                   <hr class="text-white w-75 mx-auto">
                   <ul class="mx-5">
-                      <li class="skills-description text-muted mb-3"><span data-localizer="backend_csharp"></span><br>- .NET Framework/Core<br>- ASP.NET</li>
-                      <li class="skills-description text-muted mb-3"><span data-localizer="backend_db"></span><br>- MySQL<br>- T-SQL<br>- SQLite</li>
+                      <li class="skills-description text-muted mb-3"><span data-localizer="backend_csharp"></span><br>- .NET Framework/Core<br>- ASP.NET<br>- WPF</li>
+                      <li class="skills-description text-muted mb-3"><span data-localizer="backend_db"></span><br>- MySQL<br>- SQLite</li>
                   </ul>
               </div>
             </div>
