Added LinkedIn, simplified footer section code

--- a/index.html
+++ b/index.html
@@ -146,14 +146,22 @@
     <hr class="text-white w-75 mx-auto" style="margin-top: 150px;">
 
     <div class="container footer-container d-flex">
-      <div class="footer-section d-flex flex-column align-items-center align-items-sm-start flex-sm-row justify-content-around">
-        <div class="mb-5">
-          <div class="footer-category text-center"><i class="fas fa-phone"></i><span data-localizer="call"></span></div>
-          <div class="footer-text">662-327-830</div>
-        </div>
-        <div class="mb-3">
-          <div class="footer-category text-center"><i class="fas fa-envelope"></i><span data-localizer="mail"></span></div>
-          <a class="footer-text" href="mailto:jakubrutkowski3012@gmail.com">jakubrutkowski3012@gmail.com</a>
+      <div class="container-fluid">
+        <div class="row text-center">
+
+          <div class="mb-5 col-lg-4">
+            <div class="footer-category text-center"><i class="fas fa-phone"></i><span data-localizer="call"></span></div>
+            <div class="footer-text">+48 662 327 830</div>
+          </div>
+          <div class="mb-5 col-lg-4">
+            <div class="footer-category text-center"><i class="fas fa-envelope"></i><span data-localizer="mail"></span></div>
+            <a class="footer-text" href="mailto:jakubrutkowski3012@gmail.com">jakubrutkowski3012@gmail.com</a>
+          </div>
+          <div class="mb-3 col-lg-4">
+            <div class="footer-category text-center"><i class="fab fa-linkedin"></i><span data-localizer="linkedin"></span></div>
+            <a class="footer-text" href="https://linkedin.com/in/jakubrutkowski3012" target="_blank">linkedin.com/in/jakubrutkowski3012</a>
+          </div>
+
         </div>
       </div>
     </div>
