Added work experience category

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/project_card.css">
+    <link rel="stylesheet" href="css/work_experience_card.css">
     <link rel="stylesheet" href="css/welcome.css">
     <link rel="stylesheet" href="css/scrollbar.css">
 	
@@ -84,6 +85,83 @@
       <div class="info-name" data-localizer="info_name"></div>
       <div class="info-stack" data-localizer="info_stack"></div>
       <div class="info-description" data-localizer="info_description"></div>
+    </div>
+
+	<hr class="text-white w-75 mx-auto">
+    <h3 class="header mt-5 text-center" id="projects" data-localizer="work_experience">Work Experience</h3>
+
+	<div class="container py-5 d-flex justify-content-center we-container">
+
+		<!-- Cafe -->
+		<div class="work-experience mb-5 mx-2 mb-xl-0">
+			<a class="project__image_container" href="img/thumb/cafe_thumb.jpg" data-fancybox="cafe">
+                <img src="img/thumb/cafe_thumb.jpg">
+            </a>
+			<div class="project__stack mt-2 mb-3 text-center text-nowrap">Cafe Website</div>
+
+			<div class="px-4">
+				<div class="we-section d-flex justify-content-between align-items-center">
+					<div class="we-header">.NET Developer</div>
+					<div>
+						<div class="we-description text-center"><strong>Cafe 15</strong></div>
+						<div class="we-description"><i class="far fa-calendar-alt me-2"></i>2020</div>
+					</div>
+				</div>
+	
+				<div class="we-section">
+					<div class="we-header text-nowrap">About</div>
+					<div class="we-description">Simple, responsive and elegant website for a local restaurant <strong>Cafe 15</strong>.</div>
+					<div class="we-description">Combines together easy to use and powerful <strong>blog system</strong> and <strong>customizable menu</strong>.</div>
+				</div>
+	
+				<div class="we-section">
+					<div class="we-header">I was responsible for</div>
+					<ul>
+						<li class="we-description">Collaborating with the customer to craft a bespoke website design</li>
+						<li class="we-description">Developing <strong>back-end</strong> and <strong>front-end</strong> from the ground up</li>
+						<li class="we-description">Integrating <strong>social media</strong> into the blog system</li>
+						<li class="we-description">Hosting and maintaining the infrastructure</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<!-- Auxilia -->
+		<div class="work-experience mb-5 mx-2 mb-xl-0">
+			<a class="project__image_container" href="img/thumb/auxilia_thumb.jpg" data-fancybox="auxilia">
+                <img src="img/thumb/auxilia_thumb.jpg">
+            </a>
+			<div class="project__stack mt-2 mb-3 text-center text-nowrap">Auxilia</div>
+
+			<div class="px-4">
+				<div class="we-section d-flex justify-content-between align-items-center">
+					<div class="we-header">.NET Developer</div>
+					<div>
+						<div class="we-description text-center"><strong>Nicman Group</strong></div>
+						<div class="we-description"><i class="far fa-calendar-alt me-2"></i>2021 - 2024</div>
+					</div>
+				</div>
+	
+				<div class="we-section">
+					<div class="we-header text-nowrap">About</div>
+					<div class="we-description">Auxilia is a comprehensive <strong>Donor Management System</strong> software that bridges the gap between nonprofits and donors to elevate fundraising and support worthy causes.</div>
+				</div>
+	
+				<div class="we-section">
+					<div class="we-header">I was responsible for</div>
+					<ul>
+						<li class="we-description">Developing, testing, and maintaining back-end services</li>
+						<li class="we-description">Designing front-end logic with <strong>Angular</strong></li>
+						<li class="we-description">Optimizing performance critical sections of the system</li>
+						<li class="we-description">Integrating <strong>SQL Server</strong> and <strong>Entity Framework</strong> for database operations</li>
+						<li class="we-description">Implementing <strong>SendGrid</strong> for email delivery</li>
+						<li class="we-description">Maintaining and enhancing payment system</li>
+						<li class="we-description">Communicating with customer to implement new features</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+
     </div>
 
     <hr class="text-white w-75 mx-auto">
