--- a/index.html
+++ b/index.html
@@ -286,7 +286,9 @@
 						<section>
 							<div class="lsystem_options_panel">
 								<div>
-									<h1>Generation</h1>
+									<div class="lsystem_generator_header">
+										<h2>Generation</h2>
+									</div>
 									<div>
 										<label for="tree_type">Tree type</label>
 										<input type="range" id="tree_type" min="0" max="4" value="0" oninput="lsystem.draw()">
@@ -298,7 +300,7 @@
 								</div>
 								<div>
 									<div class="lsystem_generator_header">
-										<h1>Leaves</h1>
+										<h2>Leaves</h2>
 										<input type="color" id="leaf_color" value="#5f926a" oninput="lsystem.draw()">
 									</div>
 									<div>
@@ -320,7 +322,7 @@
 								</div>
 								<div>
 									<div class="lsystem_generator_header">
-										<h1>Branches</h1>
+										<h2>Branches</h2>
 										<input type="color" id="branch_color" value="#8a6240" oninput="lsystem.draw()">
 									</div>
 									<div>
