--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
 		<!-- Auxilia -->
 		<div class="work-experience mb-5 mx-2 mb-xl-0">
-			<a class="project__image_container" href="img/thumb/auxilia_thumb.jpg" data-fancybox="auxilia">
-                <img src="img/thumb/auxilia_thumb.jpg">
+			<a class="project__image_container" href="img/projects/auxilia/thumb.jpg" data-fancybox="auxilia">
+                <img src="img/projects/auxilia/thumb.jpg">
             </a>
 			<div class="project__stack mt-2 mb-3 text-center text-nowrap">Auxilia</div>
 
