--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
 	<hr class="text-white w-75 mx-auto">
-    <h3 class="header mt-5 text-center" id="projects" data-localizer="work_experience">Work Experience</h3>
+    <h3 class="header mt-5 text-center" id="projects" data-localizer="work_experience"></h3>
 
 	<div class="container py-5 d-flex justify-content-center we-container">
 
@@ -100,7 +100,7 @@
 			<a class="project__image_container" href="img/projects/cafe/thumb.jpg" data-fancybox="cafe">
                 <img src="img/projects/cafe/thumb.jpg">
             </a>
-			<div class="project__stack mt-2 mb-3 text-center text-nowrap">Cafe Website</div>
+			<div class="project__stack mt-2 mb-3 text-center text-nowrap" data-localizer="cafe_title"></div>
 
 			<div class="px-4">
 				<div class="we-section d-flex justify-content-between align-items-center">
@@ -112,18 +112,18 @@
 				</div>
 	
 				<div class="we-section">
-					<div class="we-header text-nowrap">About</div>
-					<div class="we-description">Simple, responsive and elegant website for a local restaurant <strong>Cafe 15</strong>.</div>
-					<div class="we-description">Combines together easy to use and powerful <strong>blog system</strong> and <strong>customizable menu</strong>.</div>
+					<div class="we-header text-nowrap" data-localizer="we_about"></div>
+					<div class="we-description" data-localizer="cafe_description_1"></div>
+					<div class="we-description" data-localizer="cafe_description_2"></div>
 				</div>
 	
 				<div class="we-section">
-					<div class="we-header">I was responsible for</div>
+					<div class="we-header" data-localizer="we_responsibilities"></div>
 					<ul>
-						<li class="we-description">Collaborating with the customer to craft a bespoke website design</li>
-						<li class="we-description">Developing <strong>back-end</strong> and <strong>front-end</strong> from the ground up</li>
-						<li class="we-description">Integrating <strong>social media</strong> into the blog system</li>
-						<li class="we-description">Hosting and maintaining the infrastructure</li>
+						<li class="we-description" data-localizer="cafe_point_1"></li>
+						<li class="we-description" data-localizer="cafe_point_2"></li>
+						<li class="we-description" data-localizer="cafe_point_3"></li>
+						<li class="we-description" data-localizer="cafe_point_4"></li>
 					</ul>
 				</div>
 			</div>
@@ -157,20 +157,20 @@
 				</div>
 	
 				<div class="we-section">
-					<div class="we-header text-nowrap">About</div>
-					<div class="we-description pe-5">Auxilia is a comprehensive <strong>Donor Management System</strong> software that bridges the gap between nonprofits and donors to elevate fundraising and support worthy causes.</div>
+					<div class="we-header text-nowrap" data-localizer="we_about"></div>
+					<div class="we-description pe-5" data-localizer="auxilia_description"></div>
 				</div>
 	
 				<div class="we-section">
-					<div class="we-header">I was responsible for</div>
+					<div class="we-header" data-localizer="we_responsibilities"></div>
 					<ul>
-						<li class="we-description">Developing, testing, and maintaining back-end services</li>
-						<li class="we-description">Designing front-end logic with <strong>Angular</strong></li>
-						<li class="we-description">Optimizing performance critical sections of the system</li>
-						<li class="we-description">Integrating <strong>SQL Server</strong> and <strong>Entity Framework</strong> for database operations</li>
-						<li class="we-description">Implementing <strong>SendGrid</strong> for email delivery</li>
-						<li class="we-description">Maintaining and enhancing payment system</li>
-						<li class="we-description">Communicating with customer to implement new features</li>
+						<li class="we-description" data-localizer="auxilia_point_1"></li>
+						<li class="we-description" data-localizer="auxilia_point_2"></li>
+						<li class="we-description" data-localizer="auxilia_point_3"></li>
+						<li class="we-description" data-localizer="auxilia_point_4"></li>
+						<li class="we-description" data-localizer="auxilia_point_5"></li>
+						<li class="we-description" data-localizer="auxilia_point_6"></li>
+						<li class="we-description" data-localizer="auxilia_point_7"></li>
 					</ul>
 				</div>
 			</div>
@@ -227,7 +227,7 @@
 
     <div class="container d-flex flex-column">
         <div class="about-header" data-localizer="about_header"></div>
-        <div class="about-text"><strong data-localizer="about_text">Thanks for visiting my portfolio!</strong></div>
+        <div class="about-text"><strong data-localizer="about_text"></strong></div>
         <div class="about-text smaller" data-localizer="about_text_smaller"></div>
     </div>
 
