Changed some texts

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
       <div class="info-start" data-localizer="info_start"></div>
       <div class="info-name" data-localizer="info_name"></div>
       <div class="info-stack" data-localizer="info_stack"></div>
-      <div class="info-description" data-localizer="info_description"></div>
+	  
+      <div class="info-description" data-localizer="info_description_1"></div>
+      <div class="info-description" data-localizer="info_description_2"></div>
     </div>
 
 	<hr class="text-white w-75 mx-auto">
@@ -226,9 +228,9 @@
     <h3 class="header my-5 text-white text-center" id="about" data-localizer="about_me"></h3>
 
     <div class="container d-flex flex-column">
-        <div class="about-header" data-localizer="about_header"></div>
         <div class="about-text"><strong data-localizer="about_text"></strong></div>
-        <div class="about-text smaller" data-localizer="about_text_smaller"></div>
+        <div class="about-text smaller" data-localizer="about_text_smaller_1"></div>
+        <div class="about-text smaller" data-localizer="about_text_smaller_2"></div>
     </div>
 
     <hr class="text-white w-75 mx-auto" style="margin-top: 150px;">
