--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                   <h3 class="skills-header mb-4 text-center">Front-End</h3>
                   <hr class="text-white w-75 mx-auto">
                   <ul class="mx-5">
-                      <li class="skills-description text-muted mb-3" data-localizer="frontend_js"></li>
-                      <li class="skills-description text-muted mb-3" data-localizer="frontend_react"></li>
-                      <li class="skills-description text-muted mb-3">Bootstrap</li>
-                      <li class="skills-description text-muted mb-3">Photoshop</li>
+                      <li class="skills-description text-muted mb-3" data-localizer="fe_skill_1"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="fe_skill_2"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="fe_skill_3"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="fe_skill_4"></li>
                   </ul>
               </div>
             </div>
@@ -206,8 +206,12 @@
                   <h3 class="skills-header mb-4 text-center">Back-End</h3>
                   <hr class="text-white w-75 mx-auto">
                   <ul class="mx-5">
-                      <li class="skills-description text-muted mb-3"><span data-localizer="backend_csharp"></span><br>- .NET Framework/Core<br>- ASP.NET<br>- WPF</li>
-                      <li class="skills-description text-muted mb-3"><span data-localizer="backend_db"></span><br>- MySQL<br>- SQLite</li>
+                      <li class="skills-description text-muted mb-3" data-localizer="be_skill_1"></li>
+                      <li class="skills-description text-muted mb-3 list-unstyled" data-localizer="be_skill_2"></li>
+                      <li class="skills-description text-muted mb-3 list-unstyled" data-localizer="be_skill_3"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="be_skill_4"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="be_skill_5"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="be_skill_6"></li>
                   </ul>
               </div>
             </div>
@@ -216,8 +220,10 @@
                   <h3 class="skills-header mb-4 text-center" data-localizer="other"></h3>
                   <hr class="text-white w-75 mx-auto">
                   <ul class="mx-5">
-                      <li class="skills-description text-muted mb-3" data-localizer="other_langs"></li>
-                      <li class="skills-description text-muted mb-3">Git (bash) & GitHub</li>
+                      <li class="skills-description text-muted mb-3" data-localizer="other_skill_1"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="other_skill_2"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="other_skill_3"></li>
+                      <li class="skills-description text-muted mb-3" data-localizer="other_skill_4"></li>
                   </ul>
               </div>
             </div>
