--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
 
     </div>
 
-    <hr class="text-white w-75 mx-auto">
+    <hr class="text-white w-75 mx-auto section-spacer">
     <h3 class="header mt-5 text-center" id="personalProjects" data-localizer="projects"></h3>
     <!-- Personal Projects (embedded with JavaScript) -->
 
-    <hr class="text-white w-75 mx-auto">
+    <hr class="text-white w-75 mx-auto section-spacer">
     <h3 class="header mt-5 text-white text-center" id="technologies" data-localizer="technologies"></h3>
 
     <div class="container py-5 my-5">
@@ -230,7 +230,7 @@
         </div>
     </div>
 
-    <hr class="text-white mt-5 w-75 mx-auto">
+    <hr class="text-white w-75 mx-auto section-spacer">
     <h3 class="header my-5 text-white text-center" id="about" data-localizer="about_me"></h3>
 
     <div class="container d-flex flex-column">
