More info about Auxilia

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 						<li class="we-description" data-localizer="auxilia_point_5"></li>
 						<li class="we-description" data-localizer="auxilia_point_6"></li>
 						<li class="we-description" data-localizer="auxilia_point_7"></li>
+						<li class="we-description" data-localizer="auxilia_point_8"></li>
 					</ul>
 				</div>
 			</div>
