--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<div class="we-header">Full Stack Developer</div>
 					<div>
 						<div class="we-description text-center"><strong>Cafe 15</strong></div>
-						<div class="we-description"><i class="far fa-calendar-alt me-2"></i>2020</div>
+						<div class="we-description"><i class="far fa-calendar-alt me-2"></i>2019 - 2020</div>
 					</div>
 				</div>
 	
